@@ -113,7 +113,7 @@ typedef struct
  */
 extern DrdThreadId    DRD_(g_drd_running_tid);
 /** Per-thread information managed by DRD. */
-extern ThreadInfo     DRD_(g_threadinfo)[DRD_N_THREADS];
+extern ThreadInfo*    DRD_(g_threadinfo);
 /** Conflict set for the currently running thread. */
 extern struct bitmap* DRD_(g_conflict_set);
 extern Bool           DRD_(verify_conflict_set);
@@ -323,7 +323,7 @@ Bool DRD_(thread_address_on_stack)(const Addr a)
 static __inline__
 Bool DRD_(thread_address_on_any_stack)(const Addr a)
 {
-   int i;
+   UInt i;
 
    for (i = 1; i < DRD_N_THREADS; i++)
    {
